[package]
name = "spacing_effect_timer"
description = "The Gap Effect Timer is a Rust-based command-line application designed to facilitate activities requiring random interval timing. It allows users to set a range for a countdown timer and a specific gap time. The application generates a random countdown within the user-defined range, provides a clear visual countdown interface, and plays distinct audio notifications at the end of the countdown and after the gap period. The looped functionality makes it ideal for repetitive tasks that benefit from randomized time intervals, such as certain training or study methods leveraging the psychological gap effect."
version = "1.0.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.1"
crossterm = "0.27.0"
rand = "0.8.5"
rodio = "0.17.1"

[profile.release]
lto = true
opt-level = "s"
debug = false
strip = true
debug-assertions = false
incremental = false

[build-dependencies]
winresource = "0.1.17"

[package.metadata.winresource]
ProductName = "Gap Effect Timer"
LegalCopyright = "Copyright © 2023 jeermuce"
OriginalFilename = "GapEffectTimer.exe"
