[package]
name = "gap_effect_timer"
description = "The Gap Effect Timer is a Rust-based command-line application designed to help study and work by breaking sessions with random breaks to reduce monotony. By allowing users to set custom minimum and maximum durations for work or study periods, the script randomly selects a time within this range and runs a countdown timer. Audible alerts signal the end of each session and break, using different sounds for clarity. Following each work or study period, a shorter countdown for a break begins, providing a clear structure to the user's routine. The process repeats indefinitely, alternating between focused sessions and breaks, ensuring consistent productivity and regular rest."
version = "1.0.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "3.0.0"
crossterm = "0.28.1"
rand = "0.8.5"
rodio = "0.20.1"
shlex = "1.3.0"

[build-dependencies]
winresource = "0.1.19"

[package.metadata.winresource]
ProductName = "Gap Effect Timer"
LegalCopyright = "Copyright © 2023 jeermuce"
OriginalFilename = "gap_effect_timer"
